--- a/src/app/components/PopUpForm/styles.module.css
+++ b/src/app/components/PopUpForm/styles.module.css
@@ -3,7 +3,7 @@
 .createListBtn {
     background-color: #C58882;
     margin: auto;
-    margin-top: 20px;
+    margin-top: 25px;
     padding: 5px 20px;
     display: block;
     border-radius: 50px;
