--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -14,6 +14,9 @@
     margin-top: 20px;
     padding: 20px;
     min-height: 0;
+    display: flex;
+    flex-direction: column;
+    overflow: hidden;
 }
 
 /* -----------------------------------------my-books start-------------------------------------- */
@@ -53,9 +56,10 @@
     margin-top: 1.7rem;
 }
 
-#createdListsWrapper {
+.createdListsWrapper {
     display: flex;
-    margin: 3.5rem 2rem;
+    margin: 1rem 0;
+    overflow-y: auto;
 }
 
 /* -----------------------------------------[listname] start-------------------------------------- */
